--- a/plugin-shared-test/pom.xml
+++ b/plugin-shared-test/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>com.funnelback</groupId>
         <artifactId>funnelback-shared-parent</artifactId>
-        <version>16.8.1</version>
+        <version>16.8.1-SNAPSHOT</version>
     </parent>
 
     <description>Utilities and supporting classes for testing plugins for the Funnelback Enterprise Search Engine</description>
