--- a/plugin-archetypes/pom.xml
+++ b/plugin-archetypes/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <artifactId>funnelback-shared-parent</artifactId>
         <groupId>com.funnelback</groupId>
-        <version>16.8.2</version>
+        <version>16.8.3-SNAPSHOT</version>
     </parent>
 
     <description>Archetype for a plugin for the Funnelback Enterprise Search Engine</description>
