--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <name>Funnelback Shared Parent</name>
     <groupId>com.funnelback</groupId>
     <artifactId>funnelback-shared-parent</artifactId>
-    <version>16.8.2</version>
+    <version>16.8.3-SNAPSHOT</version>
 
     <description>Parent project for the shared plugin interfaces used in the Funnelback Enterprise Search Engine</description>
     <url>https://github.com/FunnelbackPtyLtd/funnelback-shared</url>
@@ -63,7 +63,7 @@
         <version.javax.validation>2.0.1.Final</version.javax.validation>
         <version.jsoup>1.14.3</version.jsoup>
         <version.junit>4.12</version.junit>
-        <version.log4j2>2.15.0</version.log4j2>
+        <version.log4j2>2.17.1</version.log4j2>
         <version.lombok>1.18.12</version.lombok>
         <version.mockito>2.21.0</version.mockito>
         <version.xstream>1.4.18</version.xstream>
