--- a/plugin-archetypes/src/main/resources/archetype-resources/pom.xml
+++ b/plugin-archetypes/src/main/resources/archetype-resources/pom.xml
@@ -14,6 +14,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
             <artifactId>funnelback-shared</artifactId>
             <groupId>com.funnelback</groupId>
             <version>${version.funnelback-shared}</version>
