--- a/plugin-archetypes/src/main/resources/archetype-resources/pom.xml
+++ b/plugin-archetypes/src/main/resources/archetype-resources/pom.xml
@@ -112,7 +112,6 @@
                         </goals>
                         <configuration>
                             <tasks>
-                                
                                 <mkdir dir="target/${project.version}" />
                                 <mkdir dir="target/${project.version}/docs" />
                                 <copy todir="target/${project.version}/docs" overwrite="true">
@@ -120,6 +119,9 @@
                                 </copy>
                                 <copy tofile="target/${project.version}/docs/README.md" overwrite="true">
                                     <fileset file="README.md" />
+                                </copy>
+                                <copy todir="target/${project.version}/docs/" overwrite="true">
+                                    <fileset dir="${project.build.resources[0].directory}" file="plugin-schema.json" />
                                 </copy>
                             </tasks>
                         </configuration>
