--- a/plugin-archetypes/pom.xml
+++ b/plugin-archetypes/pom.xml
@@ -67,6 +67,7 @@
                                 <property><name>filtering</name><value>true</value></property>
                                 <property><name>jsoup-filtering</name><value>true</value></property>
                                 <property><name>search-servlet-filtering</name><value>true</value></property>
+                                <property><name>start-url-provider</name><value>true</value></property>
                                 <property><name>groupId</name><value>testGroupId</value></property>
                                 <property><name>artifactId</name><value>testArtifactId</value></property>
                                 <property><name>package</name><value>com.example.test</value></property>
