[FUN 16643] Added Maven plugin (mojo) to generate plugin documentation in AsciiDoc format. Added code to generate plugin docs based on PluginUtils class. Added three files that will contain basic details from the change log, example and extra config settings. These files can be appended at the end of the index.adoc

--- a/plugin-archetypes/src/main/resources/archetype-resources/pom.xml
+++ b/plugin-archetypes/src/main/resources/archetype-resources/pom.xml
@@ -66,6 +66,7 @@
                     <execution>
                         <goals>
                             <goal>schema-generator</goal>
+                            <goal>ascii-doc-generator</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -122,6 +123,9 @@
                                 </copy>
                                 <copy todir="target/${project.version}/docs/" overwrite="true">
                                     <fileset dir="${project.build.resources[0].directory}" file="plugin-schema.json" />
+                                </copy>
+                                <copy todir="target/${project.version}/docs/" overwrite="true">
+                                    <fileset dir="${project.build.resources[0].directory}" file="index.adoc" />
                                 </copy>
                             </tasks>
                         </configuration>
