--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,9 +42,9 @@ build:
         - access/squiz-network
 
 # Release a version of funnelback-shared to the gitlab package registry
-publish_to_gitlab:
- extends:
-    - .template:funnelback:mvn-publish:push
+# publish_to_gitlab:
+#  extends:
+#     - .template:funnelback:mvn-publish:push
 
 
 Trigger plugins mono repo:
