--- a/plugin-config-builder/pom.xml
+++ b/plugin-config-builder/pom.xml
@@ -80,7 +80,6 @@
       <version>${maven.version}</version>
       <scope>provided</scope>
     </dependency>
-
     <dependency>
       <groupId>com.funnelback</groupId>
       <artifactId>funnelback-shared</artifactId>
@@ -96,7 +95,6 @@
       <artifactId>commons-lang3</artifactId>
       <version>3.12.0</version>
     </dependency>
-
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-compat</artifactId>
@@ -106,12 +104,12 @@
     <dependency>
       <groupId>org.apache.maven.plugin-testing</groupId>
       <artifactId>maven-plugin-testing-harness</artifactId>
-      <version>3.3.0</version>
+      <version>4.0.0-alpha-2</version>
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
