--- a/plugin-shared-test/pom.xml
+++ b/plugin-shared-test/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>funnelback-shared-test</artifactId>
     <packaging>jar</packaging>
@@ -86,7 +86,7 @@
                     <failOnError>false</failOnError>
                     <!-- https://stackoverflow.com/a/57284322 -->
                     <bottom>
-                    <![CDATA[
+                        <![CDATA[
                         <script>
                         if (typeof useModuleDirectories !== 'undefined') {
                           useModuleDirectories = false;
@@ -130,8 +130,13 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.vintage</groupId>
+            <artifactId>junit-vintage-engine</artifactId>
             <scope>compile</scope>
         </dependency>
         <dependency>
