--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,14 @@
     <version.jackson2>2.13.4.2</version.jackson2>
     <version.javax.validation>2.0.1.Final</version.javax.validation>
     <version.jsoup>1.17.1</version.jsoup>
-    <version.junit>4.13.2</version.junit>
+    <version.junit>5.10.2</version.junit>
     <version.log4j2>2.17.1</version.log4j2>
     <version.lombok>1.18.24</version.lombok>
     <version.mockito>2.21.0</version.mockito>
     <version.xstream>1.4.19</version.xstream>
     <version.javax.servlet>3.1.0</version.javax.servlet>
   </properties>
-      
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -125,8 +125,14 @@
         <version>${version.javax.servlet}</version>
       </dependency>
       <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>${version.junit}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.junit.vintage</groupId>
+        <artifactId>junit-vintage-engine</artifactId>
         <version>${version.junit}</version>
         <scope>test</scope>
       </dependency>
