--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ include:
   - project: funnelback-rnd/gitlab-templates
     ref: main
     file: all.yml
+  - project: funnelback-rnd/gitlab-templates
+    ref: main
+    file: security.yml
 
 variables:
   # This will supress any download for dependencies and plugins or upload messages which would clutter the console log.
