--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,10 @@ variables:
   # Lifted from https://gitlab.com/gitlab-org/gitlab-ci-yml/blob/master/Maven.gitlab-ci.yml
   MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
 
+default:
+  tags:
+    - ec2glr/aws-search-np
+
 cache:
     key: "$CI_JOB_NAME"
     paths:
@@ -38,8 +42,7 @@ build:
                 - "*/target/failsafe-reports/TEST-*.xml"
 
     tags:
-        - purpose/general
-        - access/squiz-network
+        - ec2glr/aws-search-np
 
 # Release a version of funnelback-shared to the gitlab package registry
 publish_to_gitlab:
@@ -78,5 +81,4 @@ release:
                 - "*/target/failsafe-reports/TEST-*.xml"
 
     tags:
-        - purpose/general
-        - access/squiz-network
+        - ec2glr/aws-search-np
