--- a/plugin-shared-test/pom.xml
+++ b/plugin-shared-test/pom.xml
@@ -72,15 +72,13 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.11.2</version>
                 <configuration>
                     <show>private</show>
-
                     <sourcepath>${project.basedir}/target/delombok</sourcepath>
                     <sourceFileIncludes>
                         <include>com/**/*.java</include>
                     </sourceFileIncludes>
-                    <!-- It can be tempting to turn this to false, don't-->
                     <failOnError>true</failOnError>
                     <docfilessubdirs>true</docfilessubdirs>
                     <failOnError>false</failOnError>
@@ -94,7 +92,7 @@
                         </script>
                     ]]>
                     </bottom>
-                    <additionalparam>--allow-script-in-comments</additionalparam>
+                    <additionalOptions>--allow-script-in-comments</additionalOptions>
                 </configuration>
                 <executions>
                     <execution>
