--- a/plugin-shared/pom.xml
+++ b/plugin-shared/pom.xml
@@ -104,7 +104,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.11.2</version>
                 <configuration>
                     <show>private</show>
                     <sourcepath>${project.basedir}/target/delombok</sourcepath>
@@ -125,7 +125,7 @@
                         </script>
                     ]]>
                     </bottom>
-                    <additionalparam>--allow-script-in-comments</additionalparam>
+                    <additionalOptions>--allow-script-in-comments</additionalOptions>
                 </configuration>
                 <executions>
                     <execution>
