--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
     <version.jackson2>2.18.2</version.jackson2>
     <version.javax.validation>2.0.1.Final</version.javax.validation>
     <version.jsoup>1.17.1</version.jsoup>
-    <version.junit>5.10.2</version.junit> 
+    <version.junit>5.11.4</version.junit>
     <version.log4j2>2.17.1</version.log4j2>
     <version.lombok>1.18.24</version.lombok>
     <version.mockito>2.21.0</version.mockito>
@@ -103,6 +103,11 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-core</artifactId>
         <version>${version.log4j2}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>${version.jackson2}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
