--- a/plugin-config-builder/pom.xml
+++ b/plugin-config-builder/pom.xml
@@ -93,7 +93,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-lang3</artifactId>
-      <version>3.17.0</version>
+      <version>${version.commons.lang}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.maven</groupId>
