--- a/plugin-shared-test/pom.xml
+++ b/plugin-shared-test/pom.xml
@@ -87,8 +87,8 @@
 
     <dependencies>
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
             <version>${version.commons.lang}</version>
         </dependency>
         <dependency>
