--- a/plugin-config-builder/pom.xml
+++ b/plugin-config-builder/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>com.funnelback</groupId>
     <artifactId>funnelback-shared-parent</artifactId>
-    <version>16.32.0-SNAPSHOT</version>
+    <version>16.32.0</version>
   </parent>
 
   <description>Maven plugin to generate plugin configuration scheme for building plugins for the Funnelback Enterprise Search Engine</description>
