SEARCH 770 - Removed publish to gitlab since it's failing for non snapshot version

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,9 +48,9 @@ build:
         - ec2glr/aws-search-np
 
 # Release a version of funnelback-shared to the gitlab package registry
-publish_to_gitlab:
- extends:
-    - .template:funnelback:mvn-publish:push
+  # publish_to_gitlab:
+      # extends:
+  #    - .template:funnelback:mvn-publish:push
 
 
 Trigger plugins mono repo:
