--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,82 +6,87 @@ include:
     ref: main
     file: security.yml
 
-variables:
-  # This will supress any download for dependencies and plugins or upload messages which would clutter the console log.
-  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
-  # Lifted from https://gitlab.com/gitlab-org/gitlab-ci-yml/blob/master/Maven.gitlab-ci.yml
-  MAVEN_OPTS: "-Dhttps.protocols=TLSv1.2 -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN -Dorg.slf4j.simpleLogger.showDateTime=true -Djava.awt.headless=true"
-
 default:
+  image: docker-hub.squiz.net/funnelback-rnd/gitlab-ci-docker:maven-central
   tags:
-    - ec2glr/aws-search-np
+    - general/small
 
 cache:
-    key: "$CI_JOB_NAME"
-    paths:
-        - .m2/repository
+  key: "$CI_JOB_NAME"
+  paths:
+    - .m2/repository
 
 stages:
   - build
+  - integration
   - deploy
   - release
 
+variables:
+  # `showDateTime` will show the passed time in milliseconds. You need to specify `--batch-mode` to make this work.
+  MAVEN_OPTS: >-
+    -Dhttps.protocols=TLSv1.2
+    -Dmaven.repo.local=$CI_PROJECT_DIR/.m2/repository
+    -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN
+    -Dorg.slf4j.simpleLogger.showDateTime=true
+    -Djava.awt.headless=true
+  # As of Maven 3.6.1, the use of `--no-transfer-progress` (or `-ntp`) suppresses downloads and uploads messages.
+  MAVEN_CLI_OPTS: >-
+    --batch-mode
+    --errors
+    --show-version
+    --no-transfer-progress
+    --update-snapshots
+
+.artifacts: &artifacts
+  artifacts:
+    expire_in: 1 hr
+    paths:
+      - "**/target/*"
+    reports:
+      junit:
+        - "**/target/surefire-reports/TEST-*.xml"
+        - "**/target/failsafe-reports/TEST-*.xml"
+
+# Compile `funnelback-shared` and execute unit tests
 build:
-    stage: build
-    image: docker-hub.squiz.net/funnelback-rnd/gitlab-ci-docker:maven-central
+  stage: build
+  script:
+    - mvn $MAVEN_CLI_OPTS -fail-at-end clean install
+    - rm -rf .m2/repository/com/funnelback/
+  <<: *artifacts
 
-    script:
-        - mvn -B -U clean install
-        - echo $CI_COMMIT_BRANCH
-        - rm -rf .m2/repository/com/funnelback/
+# Verify if changes from `funnelback-shared` affect/break released plugins
+verify_plugins:
+  stage: integration
+  variables:
+    FUNNELBACK_SHARED_BRANCH: $CI_COMMIT_BRANCH
+  needs:
+    - build
+  trigger:
+    project: funnelback-rnd/funnelback-plugins-mono-repo
+    branch: master
+    strategy: depend
 
-    artifacts:
-        expire_in: 1 hr
-        paths:
-            - target/*
-        reports:
-            junit:
-                - "*/target/surefire-reports/TEST-*.xml"
-                - "*/target/failsafe-reports/TEST-*.xml"
+# Release `funnelback-shared` to the GitLab package registry (development version)
+publish_to_gitlab:
+  extends:
+    - .template:funnelback:mvn-publish:push
 
-    tags:
-        - ec2glr/aws-search-np
-
-# Release a version of funnelback-shared to the gitlab package registry
-  # publish_to_gitlab:
-      # extends:
-  #    - .template:funnelback:mvn-publish:push
-
-
-Trigger plugins mono repo:
-    stage: deploy
-    variables:
-        FUNNELBACK_SHARED_BRANCH: $CI_COMMIT_BRANCH
-    trigger:
-        project: funnelback-rnd/funnelback-plugins-mono-repo
-        branch: master
-        strategy: depend
-
+# Release `funnelback-shared` to the Maven central registry (production version)
 release:
-    stage: release
-    when: manual
-    only:
-        - /^release-.*$/
-    image: docker-hub.squiz.net/funnelback-rnd/gitlab-ci-docker:maven-central
-    before_script:
-        - ./pre-release.sh
-    script:
-        - mvn -B -U -P central-release clean deploy -Dgpg.passphrase=$GPGPASSPHRASE
-        - rm -rf .m2/repository/com/funnelback/
-
-    artifacts:
-        expire_in: 1 hr
-        paths:
-            - target/*
-        reports:
-            junit:
-                - "*/target/surefire-reports/TEST-*.xml"
-                - "*/target/failsafe-reports/TEST-*.xml"
-
-    tags:
-        - ec2glr/aws-search-np
+  stage: release
+  when: manual
+  only:
+    - /^release-.*$/
+  script:
+    - SNAPSHOT_VERSION=$(mvn org.apache.maven.plugins:maven-help-plugin:3.1.1:evaluate -Dexpression=project.version -q -DforceStdout)
+    - NON_SNAPSHOT_VERSION=${SNAPSHOT_VERSION%-SNAPSHOT}
+    - echo "version change ${SNAPSHOT_VERSION} -> ${NON_SNAPSHOT_VERSION}"
+    - mvn $MAVEN_CLI_OPTS versions:set -DnewVersion=$NON_SNAPSHOT_VERSION
+    - VERSION_TEST=$(mvn org.apache.maven.plugins:maven-help-plugin:3.1.1:evaluate -Dexpression=project.version -q -DforceStdout)
+    - echo "version testing $VERSION_TEST"
+    - if [[ $VERSION_TEST == *"SNAPSHOT" ]]; then echo "Failed to update version to release one"; exit 1; fi
+    - mvn $MAVEN_CLI_OPTS -P central-release clean deploy -Dgpg.passphrase=$GPGPASSPHRASE
+    - rm -rf .m2/repository/com/funnelback/
+  <<: *artifacts
