SEARCH-1116 - Changed pom file to point deployments to maven central instead of ossrh
Closes SEARCH-1116

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,8 @@ publish_to_gitlab:
 # Release `funnelback-shared` to the Maven central registry (production version)
 release:
   stage: release
+  extends:
+    - .template:funnelback:mvn-central-publish:authenticate
   when: manual
   only:
     - /^release-.*$/
