--- a/plugin-archetypes/src/main/resources/archetype-resources/.gitlab-ci.yml
+++ b/plugin-archetypes/src/main/resources/archetype-resources/.gitlab-ci.yml
@@ -19,5 +19,5 @@ build:
       - target/*
     reports:
       junit:
-        - "*/target/surefire-reports/TEST-*.xml"
-        - "*/target/failsafe-reports/TEST-*.xml"
+        - "target/surefire-reports/TEST-*.xml"
+        - "target/failsafe-reports/TEST-*.xml"
