[DISCOVERY-164] Add `UpdateLifecyclePlugin` to execute plugin during collection update
## Change description

- Add `UpdateLifecyclePlugin` to execute the plugin during collection updates
  - supported steps are pre/post gather, on update stop (cancel) or fail 

## Type of change
- [ ] Bug fix (fixes an issue)
- [x] New feature (adds functionality)

## Related issues

- DISCOVERY-164

## Checklists

### For MR Raiser

#### Development

- [x] Pipeline checks pass (Including Linting and Automated Tests)
- [x] Application changes have been tested thoroughly

#### Review

- [x] Merge request has a descriptive title and context useful to a reviewer. Screenshots or screencasts are attached as necessary
- [x] "Ready for review" label attached and reviewers assigned
- [x] Pull request linked to task tracker where applicable

### For MR Reviewer

### Security

- [ ] Security impact of change has been considered
- [ ] Code follows company security practices and guidelines

### Network

- [ ] Changes to network configurations have been reviewed
- [ ] Any newly exposed public endpoints or data have gone through security review

### Code review 

- [ ] Changes have been reviewed by at least one other contributor

--- a/plugin-archetypes/pom.xml
+++ b/plugin-archetypes/pom.xml
@@ -62,6 +62,7 @@
                             <properties>
                                 <property><name>gatherer</name><value>true</value></property>
                                 <property><name>facets</name><value>true</value></property>
+                                <property><name>updateLifeCycle</name><value>true</value></property>
                                 <property><name>indexing</name><value>true</value></property>
                                 <property><name>searchLifeCycle</name><value>true</value></property>
                                 <property><name>filtering</name><value>true</value></property>
